# macro-ah

./: .gitignore  LICENSE  README.md  config.json.example
ahk/: macro_ah.ahk
python/: pyproject.toml
python/src/macro_ah/: __init__.py  __main__.py  automation.py  config.py  grid.py  safety.py
python/tests/: test_config.py  test_grid.py
